--- a/package.json
+++ b/package.json
@@ -4,17 +4,15 @@
   "private": true,
   "workspaces": [
     "host",
-    "remote/**/*"
+    "common/**/*",
+    "entries/**/*"
   ],
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev"
   },
   "devDependencies": {
-    "esbuild-loader": "^2.19.0",
+    "prettier": "^2.7.1",
     "turbo": "^1.2.6"
-  },
-  "dependencies": {
-    "inquirer": "^8.2.4"
   }
 }
