--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "workspaces": [
     "host",
     "common/**/*",
-    "entries/**/*"
+    "entries/*"
   ],
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev"
   },
   "devDependencies": {
+    "@yarnpkg/sdks": "^3.0.0-rc.11",
+    "eslint": "^8.19.0",
     "prettier": "^2.7.1",
-    "turbo": "^1.2.6"
+    "turbo": "^1.2.6",
+    "typescript": "^4.7.4"
   }
 }
