--- a/entries/todo/package.json
+++ b/entries/todo/package.json
@@ -17,6 +17,7 @@
     "esbuild-loader": "^2.19.0",
     "eslint": "^7.32.0",
     "prettier": "^2.4.1",
+    "terser-webpack-plugin": "^5.3.3",
     "typescript": "^4.7.0",
     "webpack": "^5.56.0",
     "webpack-cli": "^4.8.0",
