--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "workspaces": [
     "host",
-    "common/**/*",
+    "common/*",
     "entries/*"
   ],
   "scripts": {
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@yarnpkg/sdks": "^3.0.0-rc.11",
+    "esbuild": "^0.14.48",
     "eslint": "^8.19.0",
     "prettier": "^2.7.1",
     "turbo": "^1.2.6",
