--- a/entries/todo/package.json
+++ b/entries/todo/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "author": "Max Jonghyuk Kim",
   "scripts": {
-    "start": "webpack serve --config webpack.config.js --env=env='development'",
+    "dev": "webpack serve --config webpack.config.js --env=env='development'",
+    "dev:standalone": "webpack serve --config webpack.config.js --env=env='development' --env=standalone='true'",
     "build": "webpack --config webpack.config.js --env=env='production'",
     "type-check": "tsc"
   },
@@ -16,6 +17,7 @@
   "devDependencies": {
     "esbuild-loader": "^2.19.0",
     "eslint": "^7.32.0",
+    "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.4.1",
     "terser-webpack-plugin": "^5.3.3",
     "typescript": "^4.7.0",
